--- a/index.html
+++ b/index.html
@@ -4,21 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>spot alarm</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 2em;
-            line-height: 1.6;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        a {
-            color: #0066cc;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<header>
+    <h1>spot alarm</h1>
+</header>
+<main>
 
     <h1>spot alarm</h1>
     <p>spot alarmは、登録した駅に近づくと振動でお知らせするアプリです。通勤や旅行での乗り過ごし防止に役立ちます。</p>
@@ -44,6 +37,9 @@
     <p>ご質問やお問い合わせは、<a href="mailto:support@example.com">support@example.com</a>までご連絡ください。</p>
 
     <h2><a href="privacy.html">プライバシーポリシーはこちら</a></h2>
-
+</main>
+<footer>
+    &copy; 2025 spot alarm
+</footer>
 </body>
 </html>
