--- a/privacy.html
+++ b/privacy.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プライバシーポリシー - spot alarm</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 2em;
-            line-height: 1.6;
-        }
-        h1 {
-            color: #333;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
