--- a/privacy.html
+++ b/privacy.html
@@ -10,13 +10,12 @@
 
     <h1>プライバシーポリシー</h1>
 
-    <p>spot alarm（以下「本アプリ」）は、ユーザーが設定した地点に近づいた際に通知を行うため、位置情報を利用します。</p>
-
-    <p>取得した位置情報は、通知機能のためにのみ使用され、外部に送信・保存されることはありません。</p>
-
-    <p>ユーザーのプライバシーを尊重し、適切な管理を行います。</p>
-
-    <p>お問い合わせは、<a href="mailto:support@example.com">support@example.com</a>までご連絡ください。</p>
-
+    <p>このアプリでは、位置情報を利用して、ユーザーが特定のスポットに近づいたかどうかを判別しています。</p>
+    <h2>位置情報の使用目的 </h2>
+    <p>本アプリは、ユーザー体験を向上させるために「常に位置情報を許可」していただく必要があります。取得した位置情報は、スポットへの接近を検知する目的でのみ使用されます。</p>
+    <h2>位置情報の取り扱い</h2>
+    <p>位置情報は端末内でのみ処理され、当アプリの運営側で収集・保存・共有することは一切ありません。</p>
+    <h2>その他</h2>
+    <p>ユーザーのプライバシー保護を最優先に考え、必要最低限の情報のみを使用しています。</p> 
 </body>
 </html>
