--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,31 @@
 
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>利用規約 / Terms of Use</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <h1>利用規約</h1>
+
+    Spot Alarm（以下「本アプリ」といいます）は、ユーザーが目的地に近づいた際に通知を行う補助的なツールです。本アプリを使用することにより、以下の条件に同意したものとみなされます。
+
+<h2>位置情報の使用</h2>
+　<p>本アプリは、目的地に近づいたことを検知するため、常に位置情報を使用します。バックグラウンドでも動作するために、端末の位置情報設定が「常に許可」になっている必要があります。</p>
+
+<h2>通知の動作について</h2>
+　<p>端末の設定やOSの制限により、通知が届かない場合があります。通知の到達は保証されるものではありません。</p>
+
+<h2>使用上の制限</h2>
+　<p>地下鉄などGPS信号が取得できない環境では、本アプリは正しく動作しない可能性があります。</p>
+
+<h2>責任の制限</h2>
+　<p>本アプリはあくまで補助的な手段であり、目的地への到着を保証するものではありません。本アプリの利用により発生した損害について、開発者は一切の責任を負いません。</p>
+
+<h2>変更・終了</h2>
+　<p>開発者は、予告なく本アプリの機能や仕様を変更、または提供を終了することがあります。</p>
+</body>
+</html>
