--- a/terms.html
+++ b/terms.html
@@ -1,31 +1,85 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>利用規約 / Terms of Use</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Spot Alarm 利用規約 / Terms of Use</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 20px;
+    }
+    .lang-switcher {
+      margin-bottom: 20px;
+    }
+    .lang-button {
+      padding: 6px 12px;
+      margin-right: 8px;
+      cursor: pointer;
+    }
+    [lang="ja"], [lang="en"] {
+      display: none;
+    }
+    .visible {
+      display: block;
+    }
+  </style>
 </head>
 <body>
 
+  <div class="lang-switcher">
+    <button class="lang-button" onclick="switchLanguage('ja')">日本語</button>
+    <button class="lang-button" onclick="switchLanguage('en')">English</button>
+  </div>
+
+  <!-- 日本語版 -->
+  <div lang="ja" id="ja" class="visible">
     <h1>利用規約</h1>
+    <p>Spot Alarm（以下「本アプリ」といいます）は、ユーザーが目的地に近づいた際に通知を行う補助的なツールです。本アプリを使用することにより、以下の条件に同意したものとみなされます。</p>
 
-    Spot Alarm（以下「本アプリ」といいます）は、ユーザーが目的地に近づいた際に通知を行う補助的なツールです。本アプリを使用することにより、以下の条件に同意したものとみなされます。
+    <h2>位置情報の使用</h2>
+    <p>本アプリは、目的地に近づいたことを検知するため、常に位置情報を使用します。バックグラウンドでも動作するために、端末の位置情報設定が「常に許可」になっている必要があります。</p>
 
-<h2>位置情報の使用</h2>
-　<p>本アプリは、目的地に近づいたことを検知するため、常に位置情報を使用します。バックグラウンドでも動作するために、端末の位置情報設定が「常に許可」になっている必要があります。</p>
+    <h2>通知の動作について</h2>
+    <p>端末の設定やOSの制限により、通知が届かない場合があります。通知の到達は保証されるものではありません。</p>
 
-<h2>通知の動作について</h2>
-　<p>端末の設定やOSの制限により、通知が届かない場合があります。通知の到達は保証されるものではありません。</p>
+    <h2>使用上の制限</h2>
+    <p>地下鉄などGPS信号が取得できない環境では、本アプリは正しく動作しない可能性があります。</p>
 
-<h2>使用上の制限</h2>
-　<p>地下鉄などGPS信号が取得できない環境では、本アプリは正しく動作しない可能性があります。</p>
+    <h2>責任の制限</h2>
+    <p>本アプリはあくまで補助的な手段であり、目的地への到着を保証するものではありません。本アプリの利用により発生した損害について、開発者は一切の責任を負いません。</p>
 
-<h2>責任の制限</h2>
-　<p>本アプリはあくまで補助的な手段であり、目的地への到着を保証するものではありません。本アプリの利用により発生した損害について、開発者は一切の責任を負いません。</p>
+    <h2>変更・終了</h2>
+    <p>開発者は、予告なく本アプリの機能や仕様を変更、または提供を終了することがあります。</p>
+  </div>
 
-<h2>変更・終了</h2>
-　<p>開発者は、予告なく本アプリの機能や仕様を変更、または提供を終了することがあります。</p>
+  <!-- 英語版 -->
+  <div lang="en" id="en">
+    <h1>Terms of Use</h1>
+    <p>Spot Alarm (hereinafter referred to as "the App") is a supplementary tool that notifies users when approaching a destination. By using the App, you are deemed to have agreed to the following terms and conditions.</p>
+
+    <h2>Use of Location Information</h2>
+    <p>The App continuously uses location data in order to detect when you are near your destination. It requires the location setting on your device to be set to "Always Allow" as it operates in the background.</p>
+
+    <h2>Notification Behavior</h2>
+    <p>Due to device settings or operating system limitations, notifications may not be delivered. The delivery of notifications is not guaranteed.</p>
+
+    <h2>Usage Limitations</h2>
+    <p>The App may not function properly in environments where GPS signals cannot be acquired, such as underground or subway locations.</p>
+
+    <h2>Limitation of Liability</h2>
+    <p>The App is intended to be a supplementary aid and does not guarantee arrival at your destination. The developer assumes no responsibility for any damages resulting from the use of the App.</p>
+
+    <h2>Modifications and Termination</h2>
+    <p>The developer may modify the features or specifications of the App or terminate its availability at any time without prior notice.</p>
+  </div>
+
+  <script>
+    function switchLanguage(lang) {
+      document.getElementById('ja').classList.remove('visible');
+      document.getElementById('en').classList.remove('visible');
+      document.getElementById(lang).classList.add('visible');
+    }
+  </script>
+
 </body>
 </html>
