--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </ul>
 
     <h2>サポート</h2>
+    <p>お困りの際は、以下のフォームにてご連絡ください。</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSed1RrEqdkOLq9HdsH52OUoxehFO7SePV2Pmox5oJ6ORuYOqw/viewform?embedded=true" width="100%" height="560" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 
     <h2><a href="terms.html">利用規約</a></h2>
