--- a/terms.html
+++ b/terms.html
@@ -16,10 +16,12 @@
       margin-right: 8px;
       cursor: pointer;
     }
-    [lang="ja"], [lang="en"] {
+    [lang="ja"],
+    [lang="en"] {
       display: none;
     }
-    .visible {
+    [lang="ja"].visible,
+    [lang="en"].visible {
       display: block;
     }
   </style>
