--- a/privacy.html
+++ b/privacy.html
@@ -75,13 +75,13 @@
     <p>All processing is handled locally on the device, minimizing the risk of external data leakage.</p>
   </div>
 
-  <script>
+<!--   <script>
     function switchLanguage(lang) {
       document.getElementById('ja').classList.remove('visible');
       document.getElementById('en').classList.remove('visible');
       document.getElementById(lang).classList.add('visible');
     }
-  </script>
+  </script> -->
 
 </body>
 </html>
