--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Spot Alarm 利用規約 / Terms of Use</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       font-family: sans-serif;
