--- a/terms.html
+++ b/terms.html
@@ -51,7 +51,7 @@
   <!-- 日本語版 (初期状態で表示) -->
   <div lang="ja" id="ja">
     <h1>利用規約</h1>
-    <p>Spot Alarm（以下「本アプリ」といいます）は、ユーザーが目的地に近づいた際に通知を行う補助的なツールです。本アプリを使用することにより、以下の条件およびAppleの標準利用規約(<a hlef="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">EULA</a>)に同意したものとみなされます。</p>
+    <p>Spot Alarm（以下「本アプリ」といいます）は、ユーザーが目的地に近づいた際に通知を行う補助的なツールです。本アプリを使用することにより、以下の条件およびAppleの標準利用規約(<a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">EULA</a>)に同意したものとみなされます。</p>
     
 
     <h2>位置情報の使用</h2>
@@ -73,7 +73,7 @@
   <!-- 英語版 (初期状態で非表示) -->
   <div lang="en" id="en" class="hidden">
     <h1>Terms of Use</h1>
-    <p>SpotAlarm ("the App") is a supplementary tool designed to notify users when approaching a destination. By using the App, you agree to these Terms of Use and to Apple's standard End User License Agreement (<a hlef="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">EULA</a>).</p>
+    <p>SpotAlarm ("the App") is a supplementary tool designed to notify users when approaching a destination. By using the App, you agree to these Terms of Use and to Apple's standard End User License Agreement (<a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">EULA</a>).</p>
 
     <h2>Use of Location Information</h2>
     <p>The App continuously uses location data in order to detect when you are near your destination. It requires the location setting on your device to be set to "Always Allow" as it operates in the background.</p>
